# pd-for-android

./: .gitignore  .gitmodules  .project  AndroidManifest.xml  Makefile  NOTES.txt  README.md  README.txt  build.gradle  circle.yml  default.properties  settings.gradle
.circleci/: config.yml
.github/workflows/: android.yml
BluetoothMidi/: .project  AndroidManifest.xml  build.xml
BluetoothMidi/res/layout/: device_list.xml  device_name.xml
BluetoothMidi/res/values/: strings.xml
BluetoothMidi/src/com/noisepages/nettoyeur/bluetooth/: BluetoothSppManager.java  BluetoothSppObserver.java  BluetoothSppReceiver.java  DeviceListActivity.java
BluetoothMidiTest/: .classpath  .project  AndroidManifest.xml  default.properties
BluetoothMidiTest/res/layout/: main.xml
BluetoothMidiTest/res/values/: strings.xml
BluetoothMidiTest/src/com/noisepages/nettoyeur/miditest/: MidiTest.java
CircleOfFifths/: .classpath  .project  AndroidManifest.xml  build.gradle  build.xml  default.properties
CircleOfFifths/misc/: Makefile  background.xcf
CircleOfFifths/res/drawable/: radiobuttons.xml
CircleOfFifths/res/layout/: main.xml
CircleOfFifths/res/menu/: circle_menu.xml
CircleOfFifths/res/raw/: chords.pd
CircleOfFifths/res/values/: strings.xml
CircleOfFifths/src/org/puredata/android/fifths/: CircleOfFifths.java  CircleView.java
PdClient/: .project  AndroidManifest.xml  build.xml  default.properties
PdClient/res/layout/: main.xml
PdClient/res/values/: strings.xml
PdClient/src/foo/bar/: PdClient.java
PdCommon/: .project  AndroidManifest.xml
PdCommon/src/org/puredata/android/ioutils/: IoUtils.java
PdCore/: .classpath  .gitignore  .project  AndroidManifest.xml  Makefile  README.txt  ant.properties  build.gradle  build.properties  build.xml  custom_rules.xml  default.properties  fat-aar.gradle  gradle.properties  project.properties  settings.gradle
PdCore/docs/: libpd.txt
PdCore/jni/: Application.mk
PdCore/jni/src/: Android.mk  Makefile  Makefile.mac  s_inter.c  z_jni.c  z_jni.h  z_libpd.c  z_libpd.h
PdCore/jni/src/example/: pdtest.c
PdCore/jni/src/objc/: PdAudio.h  PdAudio.m
PdCore/pd-core/: AndroidManifest.xml  LICENSE.txt  build.gradle
PdCore/pd-core/src/main/jni/: Application.mk
PdCore/res/values/: audio.xml  strings.xml  styles.xml
PdCore/res/xml/: preferences.xml
PdCore/src/main/: AndroidManifest.xml
PdCore/src/main/jni/: Application.mk  CMakeLists.txt
PdCore/src/main/res/values/: strings.xml
PdCore/src/main/res/xml/: preferences.xml
PdCore/src/org/puredata/core/: PdBase.java  PdReceiver.java
PdCoreP5/: .classpath  .project  AndroidManifest.xml  default.properties  project.properties
PdCoreP5/res/values/: strings.xml
PdP5Sample/: .classpath  .project  AndroidManifest.xml  default.properties  project.properties
PdP5Sample/res/values/: strings.xml
PdService/: .classpath  .project  AndroidManifest.xml  build.xml  default.properties
PdService/res/menu/: pd_test_menu.xml
PdService/res/values/: audio.xml  strings.xml
PdTest/: .classpath  .project  AndroidManifest.xml  build.gradle  default.properties  proguard-rules.pro  project.properties
PdTest/jni/: Android.mk  Application.mk  CMakeLists.txt  helloworld.c
PdTest/res/layout/: main.xml
PdTest/res/raw/: test.pd
PdTest/res/values/: strings.xml
RjDj/: .project  AndroidManifest.xml  build.xml
RjDj/res/layout/: choose.xml  main.xml
RjDj/res/raw/: accelerate.pd  soundinput.pd  soundoutput.pd
RjDj/res/values/: strings.xml
ScenePlayer/: .classpath  .gitignore  .project  AndroidManifest.xml  LICENSE.txt  Makefile  build.gradle  build.xml  default.properties  local.properties  project.properties
ScenePlayer/jni/: Android.mk  Application.mk  Makefile  makefile_mingw  rj_zcr~-help.pd
ScenePlayer/res/drawable/: divider_horizontal_dark.xml  info_button.xml  play_button.xml  record_button.xml  tab_recordings_selector.xml  tab_rjdj_me_selector.xml  tab_scenes_selector.xml
ScenePlayer/res/layout/: file_dialog_main.xml  file_dialog_row.xml  main.xml  recording_item.xml  recording_player.xml  recording_selection.xml  scene_player.xml  scene_selection.xml  two_line_dialog_title.xml  two_line_list_item.xml
ScenePlayer/res/menu/: selection_menu.xml
ScenePlayer/res/raw/: playback.pd  recorder.pd
ScenePlayer/res/values/: strings.xml  styles.xml
ScenePlayer/src/com/lamerman/: FileDialog.java
Voice-O-Rama/: .classpath  .project  AndroidManifest.xml  build.gradle  default.properties
Voice-O-Rama/res/layout/: main.xml
Voice-O-Rama/res/layout-land/: main.xml
Voice-O-Rama/res/raw/: test.pd
Voice-O-Rama/res/values/: strings.xml
assets/: osc440.pd  test.pd  test2.pd  test3.pd  test4.pd
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Makefile  d_array.c  d_math.c  d_osc.c  g_canvas.c  g_editor.c  g_rtext.c  libpdreceive.c  m_pd.c  m_pd.h  s_audio.c  s_audio_java.c  s_audio_java.h  s_audio_libpd.c  s_audio_libpd.h  s_file.c  s_inter.c  s_loader.c  s_main.c  s_path.c  s_stuff.h  x_javarec.c  x_javarec.h  x_libpdreceive.c  x_misc.c  z_java.c  z_java.h  z_java_utils.c  z_java_utils.h  z_jni.c  z_jni.h  z_libpd.c  z_libpd.h
jni/extra/fiddle~/: Android.mk  foo
jni/extra/stdout/: stdout.pd_linux
jni/src/: Android.mk  Makefile  s_audio.c  s_stuff.h  z_jni.c  z_libpd.c  z_libpd.h
res/layout/: main.xml
res/raw/: test.pd
res/values/: audio.xml  strings.xml
res/xml/: preferences.xml
src/org/puredata/android/: PdAndroidService.java  PdAndroidTest.java  PdServiceTest.java  PdStatusWatcher.java
src/org/puredata/android/io/: AudioParameters.java  AudioRecordWrapper.java  AudioWrapper.java  PdAndroidThread.java  PdAudio.java  PdAudioThread.java  VersionedAudioFormat.java
src/org/puredata/android/service/: IPdClient.aidl  IPdListener.aidl  IPdService.aidl  KillPdService.java  PdInterface.aidl  PdMessage.java  PdPreferences.java  PdService.java  PdServiceHub.java
src/org/puredata/core/: PdBase.java  PdReceiver.java
src/org/puredata/core/utils/: PdDispatcher.java  PdListener.java  PdUtils.java
(+78 files in other folders)
